project/test/syntax/good/Good53.ty
singleton class Expressions { 
    
    variables: {
        expressionField: Int = 3 + 8 % 2 + this.randomValue + this.foo(5);
    }
}
